# RustSend

./: package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/proto/: file_rpc.proto
src-tauri/src/: commands.rs  grpc_client.rs  lib.rs  main.rs  server.rs  server_starter.rs
