[package]
name = "rust-send-gui"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rust_send_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-prost-build = "0.14.2"




[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
dashmap = "6.1.0"
env_logger = "0.11.8"
futures = "0.3.31" 
log = "0.4.29"
once_cell = "1.21.3"
parking_lot = "0.12.5"
prost = "0.14.1"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tokio-stream = "0.1.17"
tonic = { version = "0.14.2" }
tonic-prost = "0.14.2"
uuid = { version = "1.19.0", features = ["v4"] }
